# AI-Software-Runtime

./: .env.example  .gitignore  AGENTS.md  AI Software Runtime(ASR)系统设计文档.md  AI Software Runtime（ASR）系统设计文档.md  AI Software runtime(ASR)技术报告.md  ASR拿来即用评估与修复报告.md  ASR控制论优化方案v3.md  ASR控制论优化评估报告v3.md  ASR的后续优化.md  README.md  Supervise-Agent：有监督长任务自动化软件工程系统.md  __init__.py  __init__.py.rej  main.py.rej  nohup.out  orchestrator.py  pyproject.toml  requirements.txt  start.sh  start_asr.sh  start_opencode.sh  storage_calc.py  storage_calc.py.rej  test_fib.py.rej  test_main.py.rej  test_verify.py  test_verify.py.rej  test_verify.py.rej.orig  系统效果验证测试报告.html
asr/: __init__.py  logger.py  runtime.py
asr/agents/: __init__.py  analyzer.py  base.py  builder.py  llm_tracker.py  opencode_backend.py  runner.py  tester.py
asr/cli/: main.py
asr/config/: __init__.py  loader.py  models.py
asr/controller/: __init__.py  convergence.py
asr/dag/: __init__.py  decomposer.py  executor.py  models.py
asr/events/: __init__.py  models.py  store.py
asr/patch/: __init__.py  diff.py
asr/runtime/: renderer.py  unified_loader.py
asr/spec/: __init__.py  compiler.py  models.py
asr/tests/: test_renderer.py
bench/: demo_compare.py  report.py
bench/tasks/: runner.py
demo_dev/: 可研报告编译器设计方案 v4.0.md
demo_dev/asr/: DESIGN.md
tests/: test_agents.py  test_config.py  test_control_theory_v3.py  test_controller.py  test_dag.py  test_events.py  test_llm_tracker.py  test_logger.py  test_patch.py  test_runtime.py  test_spec.py
比赛提交材料/: opencode.json  个人比赛要求.md  核心报告_ASR_AI软件收敛运行时.md
(+62 files in other folders)
